--- a/public/styles.css
+++ b/public/styles.css
@@ -577,12 +577,13 @@ li {
 #reg-fields input {
     /* width: 300px;
     height: 50px; */
-    background-color: white;
-    border-bottom: 0.5px solid black;
+    background-color: black;
+    border-bottom: 0.5px solid white;
     /* border-bottom: 1px solid black; */
     border-top: none;
     border-left: none;
     border-right: 0.5px solid black;
+    color: white;
 }
 
 #login button,
